--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/estilo.css
@@ -24,10 +24,12 @@ h2{
 }
 
 h4{
-    margin: 0px;
-    margin-top: 3px;
-    font-weight: lighter;
-    background-color: #CCCC88;
+margin: 0px;
+margin-top: 3px;
+font-weight: lighter;
+background-color: #CCCC88;
+vertical-align: middle;
+
 }
 
 a{
@@ -72,6 +74,7 @@ margin-bottom: 10px;
     text-align: center;
     padding: 5px;
     margin-top: 8px;
+    font-size: 16px;
 }
 
 .imagenJordan img{ 
@@ -91,8 +94,10 @@ margin-bottom: 10px;
     margin: 0px;
     margin-bottom: 3px;
     margin-top: 3px;
-    font-weight: lighter;
     background-color: #CCCC88;
+    font-weight: bold;
+    font-size: 80%;
+    padding: 2px;
 }
 
 .columnas{
@@ -131,8 +136,8 @@ marks: none;
 line-height: 25px;
 }
 
-li::marker {
-    content: '';
+ol>li::marker {
+content: '';
 }
 
 .primer-nivel{
@@ -154,13 +159,20 @@ font-weight: 100;
 text-decoration: none;
 }
 
-.carreraDeportiva, .trayectoria{
+.carreraDeportiva, .trayectoria, .medallero, .titulos{
 margin: 0px;
 margin-bottom: 3px;
 margin-top: 3px;
 font-weight: lighter;
 text-align: center;
 background-color: #CCCC88;
+/* font-weight: bold;*/
+font-size: 80%;
+padding: 2px;
+}
+
+.carreraDeportiva, .trayectoria{
+font-weight: bold;
 }
 
 h4 img{
@@ -174,12 +186,55 @@ margin-bottom: 2px;
 margin: 0px;
 margin-bottom: 3px;
 margin-top: 3px;
-font-weight: lighter;
+/* font-weight: lighter; */
 text-align: center;
 background-color: #FAF0E6;
+font-weight: bold;
+font-size: 80%;
+padding: 2px;
 }
 
 .olimpiadas{
 vertical-align: middle;
 }
 
+.lista2{
+font-size: 75%;
+text-align: left;
+overflow: hidden;
+line-height: 18px;
+margin-left: -10px;
+line-height: 0px;
+}
+
+.medallero{
+overflow: hidden;
+/* vertical-align: middle; */
+}
+
+.medallero>.mostrar{
+text-align: right;
+font-size: 12px;
+float: right;
+/* vertical-align: middle; */
+}
+
+.titulos>.mostrar{
+text-align: right;
+font-size: 12px;
+float: right;
+}
+
+.resaltado{
+font-weight: bold;
+}
+
+.resaltado2{
+font-weight: bold;
+font-size: 18px;
+}
+
+.resaltado3{
+font-weight: bold;
+font-size: 13px;
+}
