--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/estilos.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/estilos.css
@@ -16,7 +16,7 @@ nav{
     background-color: #3f3f3f;
     color: white;
     width: 100%;
-    height: 80px;
+    height: 110px;
 
     position: fixed;
     z-index: 1000;
@@ -35,17 +35,19 @@ nav{
     letter-spacing: 3px;
     /* display: inline-block; */
     width: 30%;
-    padding-top: 10px;
+    padding-top: 22px;
     padding-left: 75px;
     float: left;
+    font-size: 20px;
 }
 
 #posicionamientos{
     width: 70%;
-    padding-top: 10px;
+    padding-top: 22px;
     padding-right: 75px;
     float: right;
     text-align: right;
+    font-size: 20px;
     /* display: inline; */
     
 }
@@ -167,3 +169,26 @@ nav{
     margin-top: 50px;
 
 }
+
+
+.caja-2-1{
+    /* width: 33.33%; */
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    float: left;
+    padding: 10px;
+    overflow: hidden;
+}
+
+/* .card-1{
+    background-color: rgb(205, 204, 204);
+    border-radius: 2%;
+    aspect-ratio: 1/1;
+    box-shadow: 2px 2px 2px gray;
+    padding: 5px;
+    overflow: hidden;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+} */
