--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/estilos.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/estilos.css
@@ -55,16 +55,16 @@ nav{
 
 #fondoBlanco{
     width: 100%;
-    /* height: 80vh; */
+    height: 87vh;
     overflow: hidden;
 }
 
 #fondoGris {
     width: 100%;
-    height: 84vh;
-    margin-top: 220px;
+    height: 79vh;
+    margin-top: 147px;
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color: #f8f8f8;
 }
 
 #fondoGrisOscuro {
@@ -79,7 +79,7 @@ nav{
     width: 100%;
     max-width: 1500px;
     margin: auto;
-    margin-top: 250px;
+    margin-top: 410px;
     overflow: hidden;
     padding: 111px;
     padding-top: 88px;
@@ -109,7 +109,7 @@ nav{
     max-width: 1500px;
     height: 645px;
     margin: auto;
-    margin-top: 135px;
+    margin-top: 186px;
     /* overflow: hidden; */
     padding-top: 40px;
     padding-right: 75px;
@@ -230,7 +230,7 @@ nav{
 
     position: fixed;
     right: 26px;
-    top: 875px;
+    bottom: 3.4%;
 }
 
 .plus>h1{
