--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/estilo.css
@@ -60,3 +60,169 @@ nav{
     white-space: nowrap
 }
 
+#primerElemento{
+    height: 1000px;
+    width: 100%;
+}
+
+#segundoElemento{
+    margin-top: 70px;
+}
+
+.cajaBlanco{
+    width: 100%;
+    border-bottom: solid 1.8px #f1eae0;
+    margin-top: 50px;
+}
+
+.columnas2{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    
+    display: flex;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.cajas{
+    width: 33.33%;
+    padding: 10px;
+    margin-bottom: 20px;
+    display: flex;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.texto1{
+    font-family: "Dosis" ;
+    font-size: 22px;
+    font-weight: 500;
+    padding-bottom: 10px;
+
+    
+    padding-bottom: 25px;
+}
+
+.texto2{
+    font-family: "Roboto";
+    font-size: 15px;
+    color: #6c757d;
+    max-width: 100%;
+}
+
+.w10{
+    width: 25%;
+}
+
+.w20{
+    width: 75%;
+    padding-right: 14px;
+}
+
+.custom-icon.material-symbols-outlined{
+    font-size: 60px;
+    color: orangered;
+}
+
+#tercerElemento{
+    margin-top: 45px;
+}
+
+.columnas3{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 95px;
+    display: flex;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.izquierda{
+width: 50%;
+}
+
+.derecha{
+width: 50%;
+}
+
+.t1{
+    font-family: "Dosis";
+    font-weight: 500;
+    font-size: 30px;
+}
+
+.t2{
+    font-size: 15px;
+    font-family: "Roboto";
+    color: #6c757d;
+    margin-top: 15px;
+    line-height: 19px;
+}
+
+.t3{
+    font-size: 15px;
+    font-family: "Roboto";
+    color: #6c757d;
+    margin-top: 75px;
+    line-height: 19px;
+}
+
+.t4{
+    font-size: 15px;
+    font-family: "Roboto";
+    color: #66615b;
+    line-height: 25px;
+}
+
+.t5{
+    margin-top: 30px;
+}
+
+.movil2>img{
+    width: 450px;
+    border-radius: 1/1;
+}
+
+.movil2{
+    display: flex;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+
+}
+
+
+
+
+
+
+@media (max-width:990px) {
+    
+    .cajas{
+        width: 50%;
+       
+    }
+}
+
+/* Dispositivos entre 0 y 400px */
+@media (max-width:726px) {
+    
+    .cajas{
+        width: 100%;
+       
+    }
+}
+
