--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/estilo.css
@@ -11,34 +11,38 @@ body{
 #degradado{
     background-image: url(home-image.jpeg);
     background-size: cover;
-    height: 1200px;
+    height: 665px;
+    min-height: 600px;
 }
 
 nav{
-    padding-top: 5%;
+    padding-top: 1.7%;
     display: flex;
     justify-content: center;
     flex-direction: row;
-
 }
 
 #columnas{
     width: 100%;
     margin: 0;
     display: flex;
-    /* gap: 15px; */
 
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     max-width: 1200px;
 }
 
 .awesomeapp{
-    width: 50%;
-    font-size: 20px;
+    font-family: "Dosis";
+    width: 45%;
+    font-size: 24px;
+    font-weight: 500;
     color: white;
+    margin-top: -7px;
+    margin-left: -60px;
+    letter-spacing: 1px;
     display: flex;
 
     flex-direction: row;
@@ -46,33 +50,122 @@ nav{
 }
 
 .menu{
-    width: 50%;
+    width: 45%;
+    margin-top: -7px;
     display: flex;
 
     flex-direction: row;
     justify-content: flex-end;
+    align-items: baseline;
     gap: 40px;
 }
 
 .menu>.elementos{
     font-size: 12px;
+    font-family: "Roboto";
     color: white;
-    white-space: nowrap
+    white-space: nowrap;
+    margin-top: 10px;
+    letter-spacing: 1px;
 }
 
-#primerElemento{
-    height: 1000px;
-    width: 100%;
+.resaltado{
+    font-size: 12px;
+    font-weight: 400;
+    font-family: "Roboto";
+    letter-spacing: 1px;
+    color: white;
+    white-space: nowrap;
+    border: 2px solid white;
+    border-radius: 20px 20px 20px 20px;
+    padding: 12px;
+}
+
+.resaltado:hover{
+    background-color: white;
+    color: black;
+}
+
+.img>img{
+    width: 50px;
+    height: 50px;
+    margin-right: 16px;
+}
+
+#caja1{
+    display: flex;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 74px;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.columna1{
+    width: 50%;
+    color: white;
+    font-family: "Roboto";
+}
+
+.columna1>h1{
+    font-family: "Dosis";
+    font-size: 54px;
+    font-weight: 500;
+    line-height: 35px;
+
+}
+
+.columna2{
+    width: 50%;
+    display: flex;
+
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.resaltadox{
+    line-height: 22px;
+    font-weight: 300;
+    margin-bottom: 25px;
+    margin-top: 50px;
+}
+
+.columna2>img{
+width: 450px;
+height: 387px;
+}
+
+.list{
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 14px;
+    gap: 5px;
+    display: flex;
+
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.custom-iconx.material-symbols-outlined{
+    font-size: 20px;
 }
 
 #segundoElemento{
-    margin-top: 70px;
+    margin-top: 86px;
 }
 
 .cajaBlanco{
     width: 100%;
     border-bottom: solid 1.8px #f1eae0;
-    margin-top: 50px;
+    margin-top: 68px;
 }
 
 .columnas2{
@@ -133,12 +226,14 @@ nav{
 
 #tercerElemento{
     margin-top: 45px;
+    margin-bottom: 75px;
 }
 
 .columnas3{
     width: 100%;
     max-width: 1200px;
     margin: auto;
+    margin-top: 0;
     margin-top: 95px;
     display: flex;
 
@@ -149,11 +244,22 @@ nav{
 }
 
 .izquierda{
-width: 50%;
+    width: 45%;
 }
 
 .derecha{
-width: 50%;
+    width: 55%;
+    margin-top: -36px;
+}
+
+.apartado{
+    display: flex;
+
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: baseline;
+    align-content: flex-start;
 }
 
 .t1{
@@ -165,7 +271,8 @@ width: 50%;
 .t2{
     font-size: 15px;
     font-family: "Roboto";
-    color: #6c757d;
+    color: #66615b;
+;
     margin-top: 15px;
     line-height: 19px;
 }
@@ -173,7 +280,7 @@ width: 50%;
 .t3{
     font-size: 15px;
     font-family: "Roboto";
-    color: #6c757d;
+    color: #66615b;
     margin-top: 75px;
     line-height: 19px;
 }
@@ -183,6 +290,15 @@ width: 50%;
     font-family: "Roboto";
     color: #66615b;
     line-height: 25px;
+    margin-top: 5px;
+    gap: 5px;
+    display: flex;
+
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
 }
 
 .t5{
@@ -199,14 +315,82 @@ width: 50%;
 
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
+    align-content: center;
 
 }
 
+#cuartoElemento{
+    width: 100%;
+    background-color: #F5FAFD;
+    padding-top: 100px;
+    padding-bottom: 125px;
+    display: flex;
+
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.teext1{
+    font-family: "Dosis";
+    font-size: 40px;
+    font-weight: 500;
+    color: #111111;
+    margin-bottom: 40px;
+}
+
+.teext2{
+    font-family: "Roboto";
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 50px;
+    line-height: 22px;
+    color: #66615b;
+}
+
+.www>img{
+    border-radius: 12px;
+}
+
+#quintoElemento{
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 125px;
+    display: flex;
+
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.preciosColumnas{
+    width: 100%;
+    display: flex;
+}
+
+.cclumna{
+    width: 25%;
+}
+
+.cclumna>.h1{
+    font-family: "Dosis";
+}
 
 
+.h2{
 
+}
+
+.destacado > h2{
+   
+}
 
 
 @media (max-width:990px) {
