--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo.css
@@ -67,9 +67,10 @@ nav{
 
 .menu-style{
     margin: 0 15px;
-    font-family: 'Alata', sans-serif;
+    font-family: "brandon-grotesque";
     font-size: 18px;
     letter-spacing: 0.14em;
+    white-space: nowrap;
     cursor: pointer;
     color: #1d1d1d;
     text-decoration: none;
@@ -82,59 +83,38 @@ nav{
 
 .caja1{
     max-height: 700px;
-    background-color: aqua;
+    background-color: rgb(115, 0, 0);
     width: 100%;
 }
 
 .pixar2{
-    background-image: url('Light_header.jpeg');
+    background-image: url("img2/ctoons_head.jpeg");
     width: 100%;
-    height: 54.5vh;
+    height: 64.5vh;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 50;
 
     position: relative;
     background-attachment: fixed;
-    background-position: right;
+    background-position: right -58px;
 }
   
 .caja{
     width: 100%;
     height: 100%;
     padding: 250px 100px;
-}
-
-#lightyear-logo{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 18%;
-}
-
-.second-box{
-    width: 100%;
-    min-height: 800px;
-    padding: 150px 142px;
-}
-
-.second-box-position{
-    width: 100%;
-    height: 100%;
-
     display: flex;
-    flex-direction: row;
+
+
 }
 
-.card-text{
-    font-size: 14px;
-    text-align: center;
+.caja h2{
+    font-family: "brandon-grotesque";
+    font-weight: 900;
+    font-style: normal;
+    font-size: 51px;
+    letter-spacing: .29em;
+    line-height: 1em;
+    text-transform: uppercase;
 }
-
-.imagen{
-    padding: 0px 17px 17px;
-}
-
-.imagen img{
-    width: 100%;
-}   
