--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/estilo.css
@@ -6,12 +6,22 @@ body{
     margin: 0;
 }
 
+
+/* 
+    MArcar la fuente con esos atributos para llamarla después
+*/
 @font-face {
     font-family: "Brandon Regular";
     src: url(fonts/BrandonGrotesque-Regular.ttf);
+
 }
 
-
+@font-face {
+    font-family: "Brandon Bold";
+    src: url(fonts/BrandonGrotesque-Bold.ttf);
+    font-weight: 600;
+    
+}
 
 * {
 box-sizing: border-box;
@@ -20,7 +30,7 @@ box-sizing: border-box;
 body {
     margin: 0;
     height: 145vh;
-    font-family: 'Alata';
+    font-family: 'Brandon Regular';
     font-weight: 400;
     font-size: 22px;
     background-color: #fff;
@@ -67,8 +77,9 @@ nav{
 
 .menu-style{
     margin: 0 15px;
-    font-family: 'Alata', sans-serif;
-    font-size: 18px;
+    font-family: 'Brandon Regular';
+    /* font-weight: 500; */
+    font-size: 15px;
     letter-spacing: 0.14em;
     cursor: pointer;
     color: #1d1d1d;
@@ -131,6 +142,14 @@ nav{
     text-align: center;
 }
 
+.card-text>p{
+    font-family: "Brandon Bold";
+    font-size: 14px;
+    font-weight: 600;
+
+}
+
+
 .imagen{
     padding: 0px 17px 17px;
 }
@@ -138,3 +157,110 @@ nav{
 .imagen img{
     width: 100%;
 }   
+
+.third-box {
+    width: 100%;
+    min-height: 270px;
+    padding: 0px 140px;
+}
+  
+.contact {
+    width: 100%;
+    height: 40px;
+}
+  
+.contact-position {
+    width: 15%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.hover-box {
+    width: 100%;
+    height: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.hover-box:hover {
+    color: #a2a2a2;
+    transition: all 0.3s;
+}
+
+.hover-box .icon-position:hover {
+    color: #1d1d1d;
+}
+
+.icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.icon-position {
+    margin-left: 12px;
+    cursor: pointer;
+}
+
+.policy {
+    width: 60%;
+    margin: auto;
+    height: 100%;
+    padding-top: 20px;
+}
+
+.policy-text {
+    text-align: center;
+    font-size: 14px;
+}
+
+.policy-style {
+    cursor: pointer;
+    color: #1d1d1d;
+    background: none;
+    letter-spacing: 4px;
+}
+
+.policy-style:hover {
+    color: #a2a2a2;
+    transition: all 0.3s;
+}
+
+.green-box {
+    height: auto;
+    margin: auto;
+    height: 20%;
+    color: #68b631;
+    border: 1px solid #68b631;
+    white-space: normal;
+    white-space: nowrap;
+    padding: 0.8em 2em;
+    font-size: 0.8em;
+    line-height: 1.2;
+    cursor: pointer;
+    background-color: rgb(233, 233, 233);
+
+    display: flex;
+    align-items: center;
+}
+
+.green-box:hover {
+    background-color: #68b631;
+    transition: all 0.2s;
+}
+
+.years {
+    padding-bottom: 15px;
+    letter-spacing: 3px;
+}
+
+.green-text {
+    font-size: 15px;
+    color: #68b631;
+}
+
+.green-box:hover .green-text {
+    color: white;
+}
