--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
@@ -6,21 +6,32 @@ body{
     margin: 0;
 }
 
-
-/* 
-    Marcar la fuente con esos atributos para llamarla después
-*/
 @font-face {
     font-family: "Brandon Regular";
-    src: url(fonts/BrandonGrotesque-Regular.ttf);
-
+    src: url(fonts2/BrandonGrotesque-Regular.ttf);
 }
 
 @font-face {
-    font-family: "Brandon Bold";
-    src: url(fonts/BrandonGrotesque-Bold.ttf);
-    font-weight: 600;
-    
+    font-family: 'Brandon Grotesque Black';
+    src: url(fonts2/BrandonGrotesque-Black.ttf);
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: 'Brandon Grotesque Medium';
+    src: url(fonts2/BrandonGrotesque-Medium.ttf);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Futura Light";
+    src: url(fonts2/futura\ light\ bt.ttf);
+}
+
+
+@font-face {
+    font-family: "Futura";
+    src: url(fonts2/futur.ttf);
 }
 
 * {
@@ -29,8 +40,8 @@ box-sizing: border-box;
 
 body {
     margin: 0;
-    height: 145vh;
-    font-family: 'Brandon Regular';
+    /* height: 145vh; */
+    /* font-family: 'Alata'; */
     font-weight: 400;
     font-size: 22px;
     background-color: #fff;
@@ -44,9 +55,9 @@ nav{
     height: 105px;
     padding-top: 38px;
     padding-bottom: 38px;
-    padding-left: 180px;
-    padding-right: 165px;
-
+    padding-left: 120px;
+    padding-right: 160px;
+    
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -55,7 +66,7 @@ nav{
 .logo{
     width: 30%;
     height: 100%;
-
+    
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -69,7 +80,7 @@ nav{
 .menu{
     width: 70%;
     height: 100%;
-
+    
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -77,10 +88,10 @@ nav{
 
 .menu-style{
     margin: 0 15px;
-    font-family: 'Brandon Regular';
-    /* font-weight: 500; */
+    font-family: "Brandon Grotesque Medium";
     font-size: 15px;
     letter-spacing: 0.14em;
+    white-space: nowrap;
     cursor: pointer;
     color: #1d1d1d;
     text-decoration: none;
@@ -93,34 +104,41 @@ nav{
 
 .caja1{
     max-height: 700px;
-    background-color: aqua;
+    background-color: rgb(115, 0, 0);
     width: 100%;
 }
 
 .pixar2{
-    background-image: url('Light_header.jpeg');
+    background-image: url("img2/ctoons_head.jpeg");
     width: 100%;
-    height: 54.5vh;
+    height: 71.5vh;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 50;
 
     position: relative;
     background-attachment: fixed;
-    background-position: right;
+    background-position: right -22px;
 }
   
 .caja{
     width: 100%;
     height: 100%;
     padding: 250px 100px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
-#lightyear-logo{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 18%;
+.caja h2{
+    font-family: "Brandon Grotesque Black";
+    font-size: 51px;
+    letter-spacing: .29em;
+    line-height: 1em;
+    /* text-transform: uppercase; */
+    color: white;
 }
 
 .caja2{
@@ -135,33 +153,135 @@ nav{
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.card{
+    margin-top: 40px;
 }
 
 .card-text{
-    font-size: 14px;
     text-align: center;
+    white-space: nowrap;
+    margin-top: -24px;
 }
 
 .card-text>p{
-    font-family: "Brandon Bold";
-    font-size: 14px;
-    font-weight: 600;
+    margin: 0;
+    font-family:"Futura Light";
+    font-size: 12px;
+    letter-spacing: 0.1em;
+
 
 }
-
 
 .imagen{
     padding: 0px 17px 17px;
+    text-align: center;
+    align-items: center;
 }
 
 .imagen img{
-    width: 100%;
+    width: 73%;
+    text-align: center;
+
 }   
 
-.caja3 {
+.caja3{
+    height: 300vh;
+    padding-left: 150px;
+    padding-right: 150px;
+
+}
+
+.container{
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.raya{
+    width: 16.65%;
+    height: 6vh;
+    margin-top: 12px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 17px;
+    padding-right: 17px;
+    border-top: 1px solid rgb(210, 210, 210);
+    position: relative;
+
+}
+
+.box{
     width: 100%;
-    min-height: 270px;
+    position: relative;
+    display: flex;
+
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+}
+
+.box__boxleft{
+    width: 55%;
+    padding: 15px;
+}
+
+.box__boxleft>.boxleft__img{
+    width: 100%;
+}
+
+.box__boxright{
+    width: 55%;
+    margin: 0;
+    padding: 15px;
+}
+
+.boxright__titulo{
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    letter-spacing: 0em;
+    font-family: 'Brandon Regular';
+    font-size: 39px;
+    text-align: left;
+    color: #1d1d1d;
+}
+
+.boxright__text{
+    font-family: "Futura Light";
+    font-size: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #1d1d1db3;
+}
+
+.resaltado__boxright__text{
+    font-family: "Futura";
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.resaltado2__boxright__text{
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.caja4 {
+    width: 100%;
+    /* min-height: 270px; */
     padding: 0px 140px;
+    font-family: "Brandon Regular";
+
+    position: absolute;
+    bottom: -7882px;
+    left: 0;
+    z-index: 200000;
 }
   
 .contacto {
@@ -268,7 +388,12 @@ nav{
     color: white;
 }
 
-.caja4{
+.caja5 {
     width: 100%;
     height: 40px;
+
+    position: absolute;
+    bottom: -7920px;
+    left: 0;
+    z-index: 2500000;
 }
