--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
@@ -6,6 +6,8 @@ body{
     margin: 0;
 }
 
+@import url('https://css.gg/menu.css');
+
 @font-face {
     font-family: "Brandon Regular";
     src: url(fonts2/BrandonGrotesque-Regular.ttf);
@@ -72,12 +74,12 @@ nav{
     justify-content: flex-start;
 }
 
-.pixar>img{
+.pixar>a>img{
     width: 100%;
     height: 100%;
 }
 
-.menu{
+.menuOrdenador{
     width: 70%;
     height: 100%;
     
@@ -102,6 +104,11 @@ nav{
     color: rgba(29, 29, 29, 0.4);
 }
 
+.menuMovil{
+    display: none;
+    width: 70%;
+}
+
 .caja1{
     max-height: 700px;
     background-color: rgb(115, 0, 0);
@@ -111,14 +118,14 @@ nav{
 .pixar2{
     background-image: url("img2/ctoons_head.jpeg");
     width: 100%;
-    height: 71.5vh;
+    height: 53.5vh;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 50;
 
     position: relative;
     background-attachment: fixed;
-    background-position: right -22px;
+    background-position: right -65px;
 }
   
 .caja{
@@ -160,6 +167,7 @@ nav{
 
 .card{
     margin-top: 40px;
+    width: 23%;
 }
 
 .card-text{
@@ -190,7 +198,7 @@ nav{
 }   
 
 .caja3{
-    height: 300vh;
+    /* height: 300vh; */
     padding-left: 150px;
     padding-right: 150px;
 
@@ -277,11 +285,7 @@ nav{
     /* min-height: 270px; */
     padding: 0px 140px;
     font-family: "Brandon Regular";
-
-    position: absolute;
-    bottom: -7882px;
-    left: 0;
-    z-index: 200000;
+    margin-top: 200px;
 }
   
 .contacto {
@@ -391,9 +395,82 @@ nav{
 .caja5 {
     width: 100%;
     height: 40px;
-
-    position: absolute;
-    bottom: -7920px;
-    left: 0;
-    z-index: 2500000;
 }
+
+
+
+
+
+@media (max-width:1520px) {
+    
+    .caja3{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+}
+
+@media (max-width:1500px) {
+    
+    .caja2{
+        padding: 0;
+        padding-top: 35px;
+    }
+
+}
+
+@media (max-width:1390px){
+
+    .menuMovil{
+        display: flex;
+
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .menuOrdenador{
+        display: none;
+    }
+
+    nav{
+        position: fixed;
+        top: 0;
+    }
+
+}
+
+@media (max-width:767px) {
+    
+    .card{
+        width: 36%;
+       
+    }
+
+    .caja2{
+        padding: 0;
+        padding-top: 35px;
+    }
+
+}
+
+@media (max-width:666px) {
+    
+    .box{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    }
+
+    .box__boxleft{
+        width: auto;
+    }
+
+    .box__boxright{
+        width: auto;
+    }
+}
+
+
