--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/Página2/estilo2.css
@@ -1,9 +1,12 @@
 *{
     box-sizing: border-box;
+
 }
 
 body{
     margin: 0;
+    width: 100%;
+    /* min-width: 465px */
 }
 
 @import url('https://css.gg/menu.css');
@@ -77,6 +80,7 @@ nav{
 .pixar>a>img{
     width: 100%;
     height: 100%;
+    min-width: 144.09px;
 }
 
 .menuOrdenador{
@@ -98,16 +102,48 @@ nav{
     color: #1d1d1d;
     text-decoration: none;
     background: none;
+    position: relative;
 }
 
-.menu-style:hover{
-    color: rgba(29, 29, 29, 0.4);
+.menu-container{
+    position: absolute;
+    top: 100%;
+    display: none;
+    padding-top: 10px;
+    left: -13px;
+    z-index: 1000000;
+    
 }
+
+.pequeMenu{
+    background-color: #1d1d1d;
+    color: white;
+    padding: 15px;
+    font-family: 'Brandon Regular';
+    font-size: 15px;
+    white-space: nowrap;
+    line-height: 25px;
+}
+
 
 .menuMovil{
     display: none;
     width: 70%;
 }
+
+.menu-style:hover>.menu-container{
+    display: block;
+    z-index: 100000000;
+}
+
+.menu-style:hover{
+    color: rgba(74, 74, 74, 0.4);
+} 
+
+.gris:hover{
+    color: rgb(183, 183, 183);
+}
+
 
 .caja1{
     max-height: 700px;
@@ -142,6 +178,7 @@ nav{
 .caja h2{
     font-family: "Brandon Grotesque Black";
     font-size: 51px;
+    white-space: nowrap;
     letter-spacing: .29em;
     line-height: 1em;
     /* text-transform: uppercase; */
@@ -339,12 +376,17 @@ nav{
 .politica-texto {
     text-align: center;
     font-size: 14px;
+    display: flex;
+
+    flex-direction: row;
+    justify-content: center;
 }
 
 .politica-style {
     cursor: pointer;
     color: #1d1d1d;
     background: none;
+    white-space: nowrap;
     letter-spacing: 4px;
     padding-bottom: 10px;
     
@@ -433,8 +475,10 @@ nav{
     }
 
     nav{
+        background-color: white;
         position: fixed;
         top: 0;
+        z-index: 100000000;
     }
 
 }
