--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/estilo.css
@@ -166,6 +166,7 @@ body{
     width: 60%;
     margin: auto;
     margin-bottom: 188px;
+    position: relative;
     gap: 25px;
     display: flex;
 
@@ -193,7 +194,10 @@ body{
     height: 100%;
     line-height: 0;
     position: relative;
+    top: 0;
+    left: 0;
 }
+
 
 .imgUp{
     width: 101%;
@@ -473,6 +477,11 @@ body{
 }
 
 
+
+.cajaFondo7{
+    width: 100%;
+}
+
 .imgUp2{
     width: 101%;
 }
@@ -499,4 +508,159 @@ body{
 .textIzq{
     color: white;
     text-align: center;
+}
+
+.fondo1{
+    width: 100%;
+    height: 330px;
+    background-image: url(img/dish-4-570x330.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.fondo2{
+    width: 100%;
+    height: 330px;
+
+    background-image: url(img/dish-5-570x330.webp);
+    background-repeat: no-repeat;
+    background-size: cover; 
+}
+
+.fondo1:hover{
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.32) 0%, rgba(0, 0, 0, 0.32) 100%), url(img/dish-4-570x330.jpeg);
+}
+
+.fondo2:hover{
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.32) 0%, rgba(0, 0, 0, 0.32) 100%), url(img/dish-5-570x330.webp);
+}
+
+
+.imgge2{
+    width: 50%;
+    gap: 25px;
+    display: flex;
+
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.circulo2{
+    width: 100%;
+    padding: 50px;
+    gap: 15px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.estilo10{
+    margin-top: 30px;
+    font-size: 60px;
+}
+
+.estilo20{
+    font-size: 30px;
+}
+
+.imgg2:hover>img{
+    filter: brightness(60%);
+}
+
+.cajaFondo8{
+    width: 100%;
+    margin-bottom: 55px;
+    /* height: 100vh; */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.booox{
+    width: 100%;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.form-control{
+    padding: 20px;
+    width: 100%;
+    height: 62px;
+}
+
+.nombre, .phone{
+    width: 25%;
+}
+
+#tress{
+    width: 100%;
+    max-width: 25%;
+
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-between;
+}
+
+.date, .guests, time{
+    width: auto;
+}
+
+.estilou{
+    color: #90909B;
+    font-size: 24px;
+    font-family: "Garamond";
+}
+
+.form-control2{
+    width: 100%;
+    height: 62px;
+}
+
+.booox>h2{
+    font-size: 40px;
+    font-family: "Garamond";
+    color: #47475B;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    letter-spacing: 0.5px;
+}
+
+.espacioXIV{
+    width: 36%;
+    position: relative;
+    left: 354px;
+    margin: auto;
+    margin-bottom: 26px;
+}
+
+.cajaFondo9{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.map{
+    width: 60%;
+    margin: auto;
+    height: 50vh;
+    margin-bottom: 150px;
 }
