--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/estilo.css
@@ -17,27 +17,27 @@ body{
 }
 
 .cajaFondo{
-    width: 100%; 
+    /* width: 100%;  */
     height: 95.5vh;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding: 30px;
 
     display: flex;
     justify-content: center;
     align-content: center;
-    /* padding: 20px; */
 }
 
 .fondo{
-    width: 97.5%;
+    width: 100%;
     background-image: url(img/page-1_slide01.jpeg);
     background-repeat: no-repeat;
     background-size: cover; 
+    background-position: center;
 }
 
 .columna{
-    width: 100%;
-    padding: 200px;
+    /* width: 100%; */
+    padding: 20px;
+    padding-top: 200px;
     display: flex;
 
     align-items: center;
@@ -82,7 +82,7 @@ body{
 .white-box{
     font-family: "Garamond";
     font-size: 20px;
-    width: 18%;
+    /* width: 18%; */
     margin-top: 45px;
     padding: 18px;
     padding-left: 60px;
@@ -91,11 +91,15 @@ body{
     background-color: transparent;
     color: white;
     white-space: nowrap;
+    transition: 0.5s;
 }
 
 .white-box:hover{
-    width: 22%;
-    transition: 0.5s;
+    /* width: 300px;
+    transition: 0.5s; */
+    padding-left: 80px;
+    padding-right: 80px;
+
 }
 
 .cajaFondo2 {
@@ -136,6 +140,7 @@ body{
     color: #90909B;
     font-size: 30px;
     margin-top: 30px;
+    text-align: center;
 
 }
 
@@ -163,26 +168,24 @@ body{
 }
 
 .caja3{
-    width: 60%;
+    max-width: 1200px;
     margin: auto;
     margin-bottom: 188px;
     position: relative;
     gap: 25px;
     display: flex;
-
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
 
 .imgg{
-    /* width: 45%; */
+    width: 50%;
     gap: 25px;
-    display: flex;
 
-    flex-wrap: wrap;
+    display: flex;
     align-content: center;
     justify-content: center;
     align-items: center;
@@ -190,21 +193,35 @@ body{
 }
 
 .imgg2{
-    /* width: 45%; */
     height: 100%;
     line-height: 0;
     position: relative;
     top: 0;
     left: 0;
+    width: 50%;
+}
+
+.imgg2>img{
+    width: 100%;
 }
 
 
 .imgUp{
-    width: 101%;
+    width: 100%;
+    height: 50%;
+}
+
+.imgUp:hover{
+    filter: brightness(60%);
 }
 
 .imgDown{
-    width: 101%;
+    width: 100%;
+    height: 50%;
+}
+
+.imgDown:hover{
+    filter: brightness(60%);
 }
 
 .cajaFondo4{
@@ -497,12 +514,14 @@ body{
     left: 0;
     bottom: 0;
     padding: 50px;
-    gap: 79px;
 
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
+}
+
+.relative{
+    position: relative;
 }
 
 .textIzq{
@@ -663,4 +682,94 @@ body{
     margin: auto;
     height: 50vh;
     margin-bottom: 150px;
+}
+
+.final{
+    height: 30vh;
+    font-family: "Garamond";
+    color: #90909B;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.texto5{
+    font-family:"Garamond Italic";
+    font-size: 26px;
+    color: #90909B;
+
+}
+
+.texto5>a{
+    text-decoration: none;
+    color: #606071;
+}
+
+.texto5>a:hover{
+    text-decoration: underline;
+}
+
+.texto6{
+    color: #606071;
+}
+
+.margin{
+    margin-bottom: 30px;
+}
+
+.gg-facebook, .gg-adidas, .gg-instagram, .gg-google{
+    color: #90909B;
+}
+
+.reesaltado{
+    margin-right: -7px;
+}
+
+.redes{
+    padding-top: 30px;
+    gap: 20px;
+    display: flex;
+    margin-bottom: 10px;
+
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+
+@media (max-width:1200px) {
+    
+    .cajaFondo{
+        padding: 0;
+    }
+
+    .columna>img {
+        margin-top: 40px;
+    }
+    
+    .caja3{
+
+    }
+
+}
+
+@media (max-width:702px) {
+    
+    .texto2{
+        text-align: center;
+    }
+    
+
+}
+
+@media (max-width: 533px){
+    
+    .texto{
+        text-align: center;
+    }
+
 }
