--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -48,13 +48,13 @@ nav{
 }
 
 .menuOrdenador{
-    width: 70%;
+    /* width: 70%; */
     height: 100%;
     
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    gap: 10px;
+    /* justify-content: flex-end; */
+    gap: 28px;
 }
 
 .menuMovil{
@@ -63,7 +63,7 @@ nav{
 }
 
 .menu-style{
-    margin: 0 15px; 
+    /* margin: 0 15px;  */
     font-size: 16px;
     letter-spacing: 0.07em;
     display: block;
@@ -85,18 +85,21 @@ nav{
     text-align: center;
 }
 
-/* .content-sepira{
-    
-} */
 
 .content-sepira:hover>.sepira{
     display: none;
 }
 
-.content-sepira:hover>.aparece{
+.content-sepira:hover>.aparece,
+.content-sepira:hover>.apareceII{
     display: block;
 }
 
+.apareceII{
+    width: 154px;
+    display: none;
+    text-align: center;
+}
 
 
 
