--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -4,10 +4,10 @@
 
 
 
-/* @font-face {
+@font-face {
     font-family: "Circular";
     src: url(fonts/circular-std-medium-500.ttf);
-} */
+}
 /* @font-face {
     font-family: "Oswald";
     src: url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
@@ -40,7 +40,7 @@ nav{
     flex-wrap: wrap;
     justify-content: center;
 
-    position: relative;
+    position: fixed;
     z-index: 10 ;
     background-color: #111111;
 
@@ -80,6 +80,7 @@ nav{
     /* margin: 0 15px;  */
     font-size: 18px;
     letter-spacing: 0.07em;
+
     display: block;
     white-space: nowrap;
     cursor: pointer;
@@ -90,7 +91,8 @@ nav{
 }
 
 .si:hover{
-    color: rgb(22, 138, 26);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 7px #ffffff;
 }
 
 .aparece{
@@ -133,13 +135,28 @@ nav{
     background-color: #1a1a1a;
 }
 
+.CajaFuera{
+    width: 100%;
+    height: 66.5vh;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+
+}
+
 .contenido{
     width: 100%;
+    height: 100%;
     padding: 76px;
+    padding-top: 190px;
     gap: 65px;
-    background-color: white;
-    position: relative;
-    overflow: hidden;
+    box-shadow: inset -15px -15px 20px 0px rgb(0 0 0 / 53%);
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* overflow: hidden; */
 
     display: flex;
     flex-direction: row;
@@ -147,7 +164,7 @@ nav{
     justify-content: center;
 }
 .container-card{
-    width: 14%;
+    width: 12%;
     display: flex;
 
     justify-content: center;
@@ -223,7 +240,6 @@ nav{
 }
 
 .imagen{
-    /* padding: 0px 17px 17px; */
     text-align: center;
     align-items: center;
     transition-duration: 0.6s;
@@ -234,8 +250,8 @@ nav{
 .imagen img{
     width: 100%;
     text-align: center;
-    box-shadow: 0px 0px 20px 1px rgb(0 0 0 / 41%);
-    BORDER-RADIUS: 19%;
+    box-shadow: 0px 0px 20px 6px rgb(0 0 0 / 41%);
+    BORDER-RADIUS: 21%;
     line-height: 0;
 } 
 
@@ -246,7 +262,7 @@ nav{
 #img-word, #img-4D{
     width: 100%;
     text-align: center;
-    box-shadow: 0px 0px 20px 4px rgb(0 0 0);
+    box-shadow: 0px 0px 20px 4px rgb(0 0 0)60%;
     BORDER-RADIUS: 53%;
     line-height: 0;
 }
@@ -268,14 +284,13 @@ nav{
 }
 
 #myVideo {
+    width: 100%;
     position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    top: -412px;
+    top: 0;
+    left: 0;
+    object-fit: cover;
 }
-
+      
 .content {
     position: fixed;
     z-index: 1;
@@ -315,6 +330,7 @@ nav{
 
 
 /* .menu-container{
+
     position: absolute;
     top: 100%;
     display: none;
@@ -351,3 +367,12 @@ nav{
 .gris:hover, .enlace:hover{
     color: rgb(183, 183, 183);
 } */
+
+
+@media (max-width: 1312px){
+    
+    .container-card{
+        width: 11%;
+    }
+
+}
